# broken-rafts

./: .gitignore  CONTRIBUTING.md  README.md  key_value_raft.py  main.py  node.py  pyproject.toml  raft.py
bugs/v0/client/blocking_handlers/: README.md
bugs/v0/client/blocking_handlers_and_client_response/: README.md
bugs/v0/client/leadership_loss_pending_writes/: README.md
bugs/v0/client/linearizable_reads/: README.md  bug.patch
bugs/v0/client/pending_client_response_reset/: README.md
bugs/v0/commit/commit_guard/: README.md  bug.patch
bugs/v0/commit/commit_quorum_includes_leader/: README.md  bug.patch
bugs/v0/commit/linearizable_reads/: README.md
bugs/v0/commit/phantom_reads/: README.md
bugs/v0/elections/edge-cases/: single_node_cluster_election.md
bugs/v0/elections/leader_id_trust_boundary/: README.md
bugs/v0/elections/liveness/: election_term_confusion.md  election_timer_reset_obligations.md  vote_idempotent_retry.md
bugs/v0/elections/noop_on_election/: README.md
bugs/v0/elections/safety/: candidate_stepdown_on_same_term_ae.md  leader_id_trust_boundary.md
bugs/v0/elections/single_node_cluster_election/: README.md
bugs/v0/elections/split_brain/: README.md
bugs/v0/elections/stale_vote_acks/: README.md
notes/client/performance/: blocking_handlers_and_client_response.md
notes/elections/safety/: stale_vote_acks.md
notes/replication/liveness/: concurrent_replication_double_decrement.md
notes/replication/safety/: follower_ack_overstates_match_index.md  match_index_from_acked_range.md
src/: README.md
src/v0/: node.py  raft.py
(+25 files in other folders)
