[project]
name = "broken-rafts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
# Each version dir under src/ is inserted onto sys.path at runtime (see main.py),
# so modules like `node` are imported flat. Mirror that for pyrefly's resolver.
search-path = [
    "src/v0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.410",
]
